generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
}
enum Role {
  ADMIN
  ENSEIGNANT
  ELEVE
}

enum TypeEtablissement {
  PUBLIC
  PRIVE
  PROFESSIONNEL
  UNIVERSITE
}

enum SEXE {
  M
  F
}
enum Redoublant {
  oui
  non
}
enum Bourse {
  oui
  non
}
enum Affecte {
  oui
  non
}
enum Justifie {
  oui
  non
}
enum StatutAbsence {
  ABSENT
  RETARD
}
model User {
  id Int @id @default(autoincrement())
  role Role
  eleve Eleve?
  enseignant Enseignant?
  admin Administrateur?
  comptesInstitutionnels CompteInstitutionnel[]
  absencesEnregistrees Absence[] @relation("AbsenceEnregistree")
}
model CompteInstitutionnel {
  id Int @id @default(autoincrement())
  login String @unique
  mot_passe String
  firstLogin Boolean @default(true)
  signatureComplete Boolean @default(false)
  userId Int
  etablissementId Int
  user User @relation(fields:[userId],references:[id])
  etablissement Etablissement @relation(fields:[etablissementId],references:[id])
  signatures Signature[]
  affectations Affectation[]
}
model Signature {
  id Int @id @default(autoincrement())
  url String
  compteInstitutionnelId Int  @unique
  createAt DateTime @default(now())
  updateAt DateTime @updatedAt
  compteInstitutionnel CompteInstitutionnel @relation(fields:[compteInstitutionnelId],references:[id])
}

model Eleve {
  matricule   String   @id @unique
  nom         String
  prenom      String
  email       String    @unique
  dateNaissance DateTime?
  lieuNaissance String ?
  sexe SEXE ? 
  affecte Affecte  @default(non) 
  boursier Bourse  @default(non)
  redoublant Redoublant  @default(non)
  nationalite String  @default("Ivoirienne") 

  userId      Int      @unique
  user        User     @relation(fields: [userId], references: [id])

  inscriptions Inscription[]   
  historique  Bulletin[]
  absences Absence[]
  certificatFrequentation CertificatFrequentation[]
}

model Enseignant {
  matricule     String   @id  
  nom           String
  prenom        String
  email         String
  userId      Int      @unique
  user        User     @relation(fields: [userId], references: [id])
  etablissements EnseignantEtablissement[]
}
model CertificatFrequentation {
  id                   String   @id @default(uuid())
  numero               String   @unique
  date_emission        DateTime @default(now())

  eleve_id             String
  eleve                Eleve    @relation(fields: [eleve_id], references: [matricule], onDelete: Cascade)

  annee_academique_id  Int
  anneeAcademique      AnneeAcademique @relation(fields: [annee_academique_id], references: [id])

  createdAt            DateTime @default(now())

  @@index([eleve_id])
  @@index([annee_academique_id])
}

model Administrateur {
  id              Int            @id @default(autoincrement())
  nom             String
  prenom          String
  email           String         @unique
  userId Int      @unique
  user User @relation(fields: [userId], references: [id])
  etablissement   Etablissement ?
}

model Classe {
  id           Int       @id @default(autoincrement())
  libelle      String
  idEtablissement Int 
  etablissement    Etablissement? @relation(fields: [idEtablissement], references: [id])
  inscriptions Inscription[]
  affectations Affectation[]
}

model Matiere {
  id                Int       @id @default(autoincrement())
  nom               String
  etablissement_id  Int    
  etablissement     Etablissement @relation(fields: [etablissement_id], references: [id])
  notes             Note[]
  affectations       Affectation[]
  @@unique([nom, etablissement_id])
}

model Trimestre {
  id_trimestre Int     @id @default(autoincrement())
  libelle      String
  date_debut DateTime 
  date_fin DateTime 
  actif Boolean
  ordre Int
  anneeAcademiqueId Int
  anneeAcademique AnneeAcademique @relation(fields: [anneeAcademiqueId], references: [id], onDelete: Cascade)
  notes        Note[]
  absence Absence[]
  resultatTrimestre Bulletin[]
  @@unique([anneeAcademiqueId, ordre])
  @@unique([anneeAcademiqueId, libelle])
  @@index([anneeAcademiqueId])
}

model Note {
  id               Int      @id @default(autoincrement())
  valeur           Float
  typeEvaluation   String   
  coefficient      Int      @default(1)
  id_inscription   Int
  id_matiere       Int
  id_trimestre     Int

  inscription Inscription @relation(fields: [id_inscription], references: [id])
  matiere     Matiere     @relation(fields: [id_matiere], references: [id])
  trimestre   Trimestre   @relation(fields: [id_trimestre], references: [id_trimestre])
  dateEvaluation DateTime @default(now())
  @@index([id_inscription])
  @@index([id_matiere])
  @@index([id_trimestre])
}

model Affectation {
  id Int @id @default(autoincrement())
  classeId Int
  matiereId Int
  compteInstitutionnelId Int
  anneeAcademiqueId Int
  coefficient Int
  classe Classe @relation(fields:[classeId],references:[id])
  matiere Matiere @relation(fields:[matiereId],references:[id])
  compteInstitutionnel CompteInstitutionnel @relation(fields:[compteInstitutionnelId],references:[id])
  anneeAcademique AnneeAcademique @relation(fields:[anneeAcademiqueId],references:[id])
  absences Absence[]
  @@index([classeId])
  @@index([matiereId])
  @@index([compteInstitutionnelId])
  @@index([anneeAcademiqueId])
  @@unique([classeId,matiereId,compteInstitutionnelId,anneeAcademiqueId])
}

model Absence {
  id                  Int      @id @default(autoincrement())
  eleveId             String
  eleve               Eleve    @relation(fields: [eleveId], references: [matricule], onDelete: Cascade)
  affectationId       Int
  affectation         Affectation @relation(fields: [affectationId], references: [id], onDelete: Cascade)
  anneeAcademiqueId   Int
  anneeAcademique     AnneeAcademique @relation(fields: [anneeAcademiqueId], references: [id])
  trimestreId         Int
  trimestre            Trimestre @relation(fields: [trimestreId], references: [id_trimestre])
  date                DateTime
  nombreHeures        Int      @default(1)
  statut              StatutAbsence @default(ABSENT)
  justifie            Justifie @default(non)
  motif               String?
  commentaire         String?
  createdBy            Int
  enseignant           User @relation("AbsenceEnregistree", fields: [createdBy], references: [id])
  createdAt            DateTime @default(now())
  updatedAt            DateTime @updatedAt

  @@unique([eleveId, affectationId, date])
  @@index([eleveId])
  @@index([affectationId])
  @@index([anneeAcademiqueId])
  @@index([trimestreId])
}



model Etablissement {
  id      Int    @id @default(autoincrement()) @unique
  nom     String
  adresse String
  phone   String?
  email   String?   @unique
  code    String
  statut  String
  directeur String
  typeEtablissement TypeEtablissement @default(PUBLIC)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  admin_id Int @unique
  classe Classe[] 
  Administrateur  Administrateur @relation(fields: [admin_id], references: [id])
  enseignants   EnseignantEtablissement[]
  Matieres Matiere[]
  bulletin Bulletin[]
  inscription Inscription[]
  compteInstitutionnel  CompteInstitutionnel[]
  anneesAcademiques AnneeAcademique[]
}

model Bulletin {
  id               Int      @id @default(autoincrement())
  eleveId          String
  idtrimestre      Int
  id_annee         Int
  id_etablissement  Int 
  moyenneGenerale  Float
  decision         String
  rang             Int
  mention          String?
  fichier_url      String?   
  eleve       Eleve @relation(fields: [eleveId], references: [matricule])
  trimestre   Trimestre @relation(fields: [idtrimestre], references: [id_trimestre])
  annee       AnneeAcademique @relation(fields: [id_annee], references: [id])
  etablissement Etablissement @relation(fields: [id_etablissement], references: [id])
  @@unique([eleveId, idtrimestre, id_annee])
}

model AnneeAcademique {
  id            Int      @id @default(autoincrement())
  libelle       String 
  date_debut    DateTime
  date_fin      DateTime
  actif         Boolean  @default(false)
  etablissementId Int
  etablissement Etablissement @relation(fields: [etablissementId], references: [id], onDelete: Restrict)
  trimestres Trimestre[]

  inscriptions  Inscription[]
  resultats     Bulletin[]
  certificatFrequentation CertificatFrequentation[]
  compteurCertificat CompteurCertificat?
  affectation Affectation[]
  absences Absence[]
  @@unique([etablissementId, libelle])
  @@index([etablissementId, actif])
}

model CompteurCertificat {
  id                   String @id @default(uuid())

  annee_academique_id  Int @unique
  anneeAcademique      AnneeAcademique @relation(fields: [annee_academique_id], references: [id], onDelete: Cascade)

  compteur             Int    @default(0)

  createdAt            DateTime @default(now())
  updatedAt            DateTime @updatedAt
}

model Inscription {
  id                    Int      @id @default(autoincrement())
  matricule_eleve       String
  id_classe             Int
  id_annee_academique   Int
  id_etablissement      Int
  dateInscription       DateTime @default(now())
  eleve   Eleve   @relation(fields: [matricule_eleve], references: [matricule])
  classe  Classe  @relation(fields: [id_classe], references: [id])
  annee   AnneeAcademique @relation(fields: [id_annee_academique], references: [id])
  etablissement Etablissement @relation(fields: [id_etablissement], references: [id])
  notes Note[]
  @@unique([matricule_eleve, id_annee_academique])
}

model EnseignantEtablissement {
  id               Int @id @default(autoincrement())
  enseignant_id    String
  etablissement_id Int
  enseignant Enseignant @relation(fields: [enseignant_id], references: [matricule])
  etablissement Etablissement @relation(fields: [etablissement_id], references: [id])
  @@unique([enseignant_id, etablissement_id])
}
