@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam roundcorner 5
skinparam shadowing false
skinparam class {
  BackgroundColor White
  BorderColor #7A1330
  ArrowColor #4A5568
  HeaderBackgroundColor #7A1330
  FontColor #222222
}
hide circle
hide empty members

' =========================================================
' HIERARCHIE UTILISATEUR (héritage)
' =========================================================

abstract class Utilisateur {
  - id : Int
  - nom : String
  - prenom : String
  - email : String
  --
  + seConnecter()
  + seDeconnecter()
}

class Administrateur {
  --
  + gererEtablissement()
  + genererBulletins()
}

class Enseignant {
  - matricule : String
  --
  + saisirNotes()
  + enregistrerAbsence()
}

class Eleve {
  - matricule : String
  - dateNaissance : DateTime
  - sexe : String
  --
  + consulterNotes()
  + consulterBulletins()
}

Utilisateur <|-- Administrateur
Utilisateur <|-- Enseignant
Utilisateur <|-- Eleve

' =========================================================
' ETABLISSEMENT / STRUCTURE
' =========================================================

class Etablissement {
  - id : Int
  - nom : String
  - adresse : String
  - typeEtablissement : String
  --
  + gererClasses()
  + gererMatieres()
}

class Classe {
  - id : Int
  - libelle : String
}

class Matiere {
  - id : Int
  - nom : String
}

class AnneeAcademique {
  - id : Int
  - libelle : String
  - actif : Boolean
  --
  + activer()
}

class Trimestre {
  - id : Int
  - libelle : String
  - actif : Boolean
  --
  + activer()
}

Etablissement "1" -- "1" Administrateur : géré par
Etablissement "1" *-- "0..*" Classe : contient
Etablissement "1" *-- "0..*" Matiere : propose
Etablissement "1" *-- "1..*" AnneeAcademique : définit
AnneeAcademique "1" *-- "1..*" Trimestre : contient

' =========================================================
' INSCRIPTION / AFFECTATION
' =========================================================

class Inscription {
  - id : Int
  - dateInscription : DateTime
  --
  + inscrireEleve()
}

class Affectation {
  - id : Int
  - coefficient : Int
  --
  + affecterEnseignant()
}

Eleve "1" -- "0..*" Inscription : effectue
Inscription "1" -- "1" Classe
Inscription "1" -- "1" AnneeAcademique

Enseignant "1" -- "0..*" Affectation : reçoit
Affectation "1" -- "1" Classe : concerne
Affectation "1" -- "1" Matiere

' =========================================================
' NOTE / ABSENCE / BULLETIN
' =========================================================

class Note {
  - id : Int
  - valeur : Float
  - coefficient : Int
  --
  + ajouterNote()
}

class Absence {
  - id : Int
  - date : DateTime
  - statut : String
  - justifie : Boolean
  --
  + enregistrer()
  + justifier()
}

class Bulletin {
  - id : Int
  - moyenneGenerale : Float
  - rang : Int
  - mention : String
  --
  + generer()
  + telecharger()
}

Inscription "1" *-- "0..*" Note : contient
Note "1" -- "1" Matiere
Note "1" -- "1" Trimestre

Eleve "1" -- "0..*" Absence : cumule
Absence "1" -- "1" Trimestre

Eleve "1" -- "0..*" Bulletin : reçoit
Bulletin "1" -- "1" Trimestre

note bottom of AnneeAcademique
  Règles essentielles :
  • une seule inscription active par élève et par année
  • une seule année académique active par établissement
  • une note appartient à une évaluation et à une inscription
end note

@enduml
